# Frogger

./: .gitignore  CMakeLists.txt  FAQ.md  Frogger_vs17.sln  Frogger_vs17.vcxproj  README.md  comp
Includes/: CharsetHandler.hpp  CollidableManager.hpp  CollidablePipelineElement.hpp  GraphicsPipelineElement.h  GraphicsPipelineManager.h  PipelineElement.h  PipelineElementManager.h  SdlContextHandler.hpp  SdlScreenHandler.h  SdlUtils.hpp  TextureHandler.hpp
Includes/GraphicsPipelines/: GPE_Background.hpp
Includes/PipelineElements/: PE_Background.hpp  PE_EventHandler.hpp  PE_Frog.hpp  PE_MovingBlock.hpp  PE_MovingEtiImage.hpp  PE_QuitHandler.hpp  PE_River.hpp  PE_TimeProvider.hpp  PE_UpperInfo.hpp
Src/: CharsetHandler.cpp  CollidableManager.cpp  GraphicsPipelineManager.cpp  PipelineElementManager.cpp  SdlContextHandler.cpp  SdlScreenHandler.cpp  SdlUtils.cpp  main.cpp
Src/GraphicsPipelines/: GPE_Background.cpp
Src/PipelineElements/: PE_Background.cpp  PE_EventHandler.cpp  PE_Frog.cpp  PE_MovingBlock.cpp  PE_MovingEtiImage.cpp  PE_QuitHandler.cpp  PE_River.cpp  PE_TimeProvider.cpp  PE_UpperInfo.cpp
